--- a/style.css
+++ b/style.css
@@ -95,6 +95,16 @@ header nav ul li a:hover {
   overflow: hidden;
 }
 
+/* Particle.js Container */
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
 .hero::before {
   content: '';
   position: absolute;
@@ -105,6 +115,7 @@ header nav ul li a:hover {
   animation: float 6s ease-in-out infinite;
   top: -250px;
   right: -250px;
+  z-index: 0;
 }
 
 @keyframes float {
@@ -119,6 +130,7 @@ header nav ul li a:hover {
   flex-wrap: wrap;
   justify-content: center;
   z-index: 1;
+  position: relative;
 }
 
 .hero-img {
